Revert to getFirst() now that project targets Java 21+
Co-authored-by: huangsam <515617+huangsam@users.noreply.github.com>